# contact

./: .gitlab-ci.yml  .~lock.datz.csv#  CMakeLists.txt  Dockerfile  blacklist.txt  data.csv
resources/: contact.gresource.xml  window.ui  window.ui~
src/: contactapp.c  contactapp.h  contactappwin.c  contactappwin.h  gtk.h  main.c  main_test.c  tree.c  tree.h
